--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="permission_title">Location Permission Denied</string>
     <string name="cancel_permission_notice">Wow, please come back again when you need it and grant the permission</string>
     <string name="start_tracking">Start Tracking</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
